--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@ install:
       Add-Type -AssemblyName System.IO.Compression.FileSystem
       if (!(Test-Path -Path "C:\sbt" )) {
         (new-object System.Net.WebClient).DownloadFile(
-          'https://dl.bintray.com/sbt/native-packages/sbt/0.13.9/sbt-0.13.9.zip',
+          'https://dl.bintray.com/sbt/native-packages/sbt/0.13.11/sbt-0.13.11.zip',
           'C:\sbt-bin.zip'
         )
         [System.IO.Compression.ZipFile]::ExtractToDirectory("C:\sbt-bin.zip", "C:\sbt")
@@ -30,3 +30,7 @@ cache:
   - C:\Users\appveyor\.m2
   - C:\Users\appveyor\.ivy2
   - C:\Program Files\Java\jdk1.7.0\src.zip
+artifacts:
+  - path: '**\*.log'
+    name: logs
+    type: zip
